feat: add dark mode toggle button with icon to interface

--- a/frontend-todo/index.html
+++ b/frontend-todo/index.html
@@ -6,12 +6,15 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
-      href="/font-awesome-4.7.0/css/font-awesome.min.css"
+      href="./font-awesome-4.7.0/css/font-awesome.min.css"
     />
     <link rel="icon" href="./images/title icon.png" />
     <title>To-Do List App</title>
   </head>
   <body>
+    <button class="switch-mode" id="switch-mode" > Dark Mode
+        <i id="mode-icon" class="fa fa-toggle-off" aria-hidden="true"></i>
+    </button>
     <div class="container">
       <div class="todo-app">
         <h1>To-Do List App</h1>
