--- a/frontend-todo/index.html
+++ b/frontend-todo/index.html
@@ -30,5 +30,6 @@
       </div>
     </div>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
   <script src="script.js"></script>
 </html>
